--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -26,6 +26,8 @@
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "sb": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "bsb": "storybook build"
   }
 }
